@@ -1,0 +1,11 @@
+include $(top_srcdir)/gnome-doc-utils.make
+
+DOC_LINGUAS = de
+
+DOC_MODULE = labyrinth
+
+DOC_ENTITIES = \
+	legal.xml
+
+dist-hook: doc-dist-hook
+
