@@ -1,3 +1,13 @@
+2008-05-12 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+
+	* src/Browser.py
+	* help/de
+	* help/de/de.po
+	* help/Makefile.am
+	* Makefile.am
+	* data/labyrinth.glade
+	Make help visible to users. Start german translation of help.
+
 2008-05-06 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
 
 	* src/MainWindow.py
